--- a/index.html
+++ b/index.html
@@ -83,8 +83,33 @@
         <h4 class="wcalc__heading">
           Тип открывания
         </h4>
-        <div class="wcalc__box">
-
+        <div class="wcalc__box wcalc__box--1">
+          <div class="wcalc__frame wcalc__frame--1">
+            <img class="" src="assets/images/f42.png" alt="">
+            <div class="wcalc__option">
+              <p class="closed" class="checked">глухое</p>
+              <p class="turn-around">поворотное</p>
+              <p class="turn-up">поворотно-откидное</p>
+            </div>
+          </div>
+        </div>
+        <div class="wcalc__box wcalc__box--2">
+          <div class="wcalc__frame wcalc__frame--2 left-float">
+            <img style="padding-left:12px;" class="" src="assets/images/f41.png" alt="">
+            <div class="wcalc__option">
+              <p class="closed" class="checked">глухое</p>
+              <p class="turn-around">поворотное</p>
+              <p class="turn-up">поворотно-откидное</p>
+            </div>
+          </div>
+          <div class="wcalc__frame wcalc__frame--1">
+            <img style="padding-left:4px;" class="" src="assets/images/f42.png" alt="">
+            <div class="wcalc__option">
+              <p class="closed" class="checked">глухое</p>
+              <p class="turn-around">поворотное</p>
+              <p class="turn-up">поворотно-откидное</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
