--- a/index.html
+++ b/index.html
@@ -83,17 +83,64 @@
         <h4 class="wcalc__heading">
           Тип открывания
         </h4>
+
         <div class="wcalc__box wcalc__box--1">
           <div class="wcalc__frame wcalc__frame--1">
             <img class="" src="assets/images/f42.png" alt="">
             <div class="wcalc__option">
-              <p class="closed" class="checked">глухое</p>
+              <p class="closed checked">глухое</p>
               <p class="turn-around">поворотное</p>
               <p class="turn-up">поворотно-откидное</p>
             </div>
           </div>
         </div>
+
         <div class="wcalc__box wcalc__box--2">
+          <div class="wcalc__frame wcalc__frame--2 left-float">
+            <img style="padding-left:12px;" class="" src="assets/images/f41.png" alt="">
+            <div class="wcalc__option">
+              <p class="closed checked">глухое</p>
+              <p class="turn-around">поворотное</p>
+              <p class="turn-up">поворотно-откидное</p>
+            </div>
+          </div>
+          <div class="wcalc__frame wcalc__frame--1">
+            <img style="padding-left:4px;" class="" src="assets/images/f42.png" alt="">
+            <div class="wcalc__option">
+              <p class="closed checked">глухое</p>
+              <p class="turn-around">поворотное</p>
+              <p class="turn-up">поворотно-откидное</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="wcalc__box wcalc__box--3">
+          <div style="float:none;" class="wcalc__frame wcalc-frame--3">
+            <img style="padding-left:15px; opacity: 1;" class="effect-3" src="assets/images/f33.png" alt="">
+            <div style="top:30px;" class="wcalc__option">
+              <p class="closed checked">глухое</p>
+              <p class="turn-around">поворотное</p>
+            </div>
+          </div>
+          <div class="wcalc__frame wcalc__frame--2 left-float">
+            <img style="padding-top:0; padding-left:12px; opacity: 1;" class="" src="assets/images/f31.png" alt="">
+            <div class="wcalc__option">
+              <p class="closed checked">глухое</p>
+              <p class="turn-around">поворотное</p>
+              <p class="turn-up">поворотно-откидное</p>
+            </div>
+          </div>
+          <div class="wcalc__frame wcalc__frame--1">
+            <img style="padding-top:0; padding-left:5px; opacity: 1;" class="" src="assets/images/f32.png" alt="">
+            <div class="wcalc__option">
+              <p class="closed checked">глухое</p>
+              <p class="turn-around">поворотное</p>
+              <p class="turn-up">поворотно-откидное</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="wcalc__box wcalc__box--4">
           <div class="wcalc__frame wcalc__frame--2 left-float">
             <img style="padding-left:12px;" class="" src="assets/images/f41.png" alt="">
             <div class="wcalc__option">
@@ -102,15 +149,24 @@
               <p class="turn-up">поворотно-откидное</p>
             </div>
           </div>
+          <div class="wcalc__frame wcalc__frame--2 left-float">
+            <img style="padding-left:4px;" class="" src="assets/images/f41.png" alt="">
+            <div class="wcalc__option">
+              <p class="closed checked">глухое</p>
+              <p class="turn-around">поворотное</p>
+              <p class="turn-up">поворотно-откидное</p>
+            </div>
+          </div>
           <div class="wcalc__frame wcalc__frame--1">
             <img style="padding-left:4px;" class="" src="assets/images/f42.png" alt="">
             <div class="wcalc__option">
-              <p class="closed" class="checked">глухое</p>
+              <p class="closed checked">глухое</p>
               <p class="turn-around">поворотное</p>
               <p class="turn-up">поворотно-откидное</p>
             </div>
           </div>
         </div>
+
       </div>
     </div>
 
