--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
     <div class="wcalc">
       <ul class="wcalc__icons">
         <li><h4 class="wcalc__heading">Тип<br>окна</h4></li>
-        <li class="wcalc-icon--1">
+        <li rel="wcalc__box--1" class="checked-icon gal-icon wcalc-icon--1">
           <img src="assets/images/fn1.png" alt="">
         </li>
-        <li class="wcalc-icon--2">
+        <li rel="wcalc__box--2" class="gal-icon wcalc-icon--2">
           <img src="assets/images/fn2.png" alt="">
         </li>
-        <li class="wcalc-icon--3">
+        <li rel="wcalc__box--3" class="gal-icon wcalc-icon--3">
           <img src="assets/images/fn3.png" alt="">
         </li>
-        <li class="wcalc-icon--4">
+        <li rel="wcalc__box--4" class="gal-icon wcalc-icon--4">
           <img src="assets/images/fn4.png" alt="">
         </li>
-        <li class="wcalc-icon--5">
+        <li rel="wcalc__box--5" class="gal-icon wcalc-icon--5">
           <img src="assets/images/fn5.png" alt="">
         </li>
-        <li class="wcalc-icon--6">
+        <li rel="wcalc__box--6" class="gal-icon wcalc-icon--6">
           <img src="assets/images/fn6.png" alt="">
         </li>
       </ul>
@@ -84,85 +84,108 @@
           Тип открывания
         </h4>
 
-        <div class="wcalc__box wcalc__box--1">
+        <div class="wcalc__box wcalc__box--1 isframe">
           <div class="wcalc__frame wcalc__frame--1">
-            <img class="" src="assets/images/f42.png" alt="">
-            <div class="wcalc__option">
+            <img class="pic" src="assets/images/f42.png" alt="">
+            <div class="wcalc__option wcalc__option--1">
               <p class="closed checked">глухое</p>
-              <p class="turn-around">поворотное</p>
-              <p class="turn-up">поворотно-откидное</p>
+              <p class="turn-right">поворотное</p>
+              <p class="turn-down">поворотно-откидное</p>
             </div>
           </div>
         </div>
 
         <div class="wcalc__box wcalc__box--2">
           <div class="wcalc__frame wcalc__frame--2 left-float">
-            <img style="padding-left:12px;" class="" src="assets/images/f41.png" alt="">
-            <div class="wcalc__option">
-              <p class="closed checked">глухое</p>
-              <p class="turn-around">поворотное</p>
-              <p class="turn-up">поворотно-откидное</p>
+            <img class="pic-rev" src="assets/images/f41.png" alt="">
+            <div class="wcalc__option wcalc__option--1">
+              <p class="closed-rev checked">глухое</p>
+              <p class="turn-left">поворотное</p>
+              <p class="turn-down-rev">поворотно-откидное</p>
             </div>
           </div>
           <div class="wcalc__frame wcalc__frame--1">
-            <img style="padding-left:4px;" class="" src="assets/images/f42.png" alt="">
-            <div class="wcalc__option">
+            <img class="pic" src="assets/images/f42.png" alt="">
+            <div class="wcalc__option wcalc__option--2">
               <p class="closed checked">глухое</p>
-              <p class="turn-around">поворотное</p>
-              <p class="turn-up">поворотно-откидное</p>
+              <p class="turn-right">поворотное</p>
+              <p class="turn-down">поворотно-откидное</p>
             </div>
           </div>
         </div>
 
         <div class="wcalc__box wcalc__box--3">
-          <div style="float:none;" class="wcalc__frame wcalc-frame--3">
-            <img style="padding-left:15px; opacity: 1;" class="effect-3" src="assets/images/f33.png" alt="">
-            <div style="top:30px;" class="wcalc__option">
-              <p class="closed checked">глухое</p>
-              <p class="turn-around">поворотное</p>
+          <div class="wcalc__frame wcalc__frame--3">
+            <img class="pic-third" src="assets/images/f33.png" alt="">
+            <div class="wcalc__option wcalc__option--1">
+              <p class="closed-third checked">глухое</p>
+              <p class="turn-down-third">поворотное</p>
             </div>
           </div>
           <div class="wcalc__frame wcalc__frame--2 left-float">
-            <img style="padding-top:0; padding-left:12px; opacity: 1;" class="" src="assets/images/f31.png" alt="">
-            <div class="wcalc__option">
-              <p class="closed checked">глухое</p>
-              <p class="turn-around">поворотное</p>
-              <p class="turn-up">поворотно-откидное</p>
+            <img class="pic-rev" src="assets/images/f31.png" alt="">
+            <div class="wcalc__option wcalc__option--1">
+              <p class="closed-rev checked">глухое</p>
+              <p class="turn-left">поворотное</p>
+              <p class="turn-down">поворотно-откидное</p>
             </div>
           </div>
           <div class="wcalc__frame wcalc__frame--1">
-            <img style="padding-top:0; padding-left:5px; opacity: 1;" class="" src="assets/images/f32.png" alt="">
-            <div class="wcalc__option">
+            <img class="pic" src="assets/images/f32.png" alt="">
+            <div class="wcalc__option wcalc__option--2">
               <p class="closed checked">глухое</p>
-              <p class="turn-around">поворотное</p>
-              <p class="turn-up">поворотно-откидное</p>
+              <p class="turn-right">поворотное</p>
+              <p class="turn-down">поворотно-откидное</p>
             </div>
           </div>
         </div>
 
         <div class="wcalc__box wcalc__box--4">
           <div class="wcalc__frame wcalc__frame--2 left-float">
-            <img style="padding-left:12px;" class="" src="assets/images/f41.png" alt="">
-            <div class="wcalc__option">
-              <p class="closed" class="checked">глухое</p>
-              <p class="turn-around">поворотное</p>
-              <p class="turn-up">поворотно-откидное</p>
+            <img class="pic-rev" src="assets/images/f41.png" alt="">
+            <div class="wcalc__option wcalc__option--1">
+              <p class="closed-rev checked" class="checked">глухое</p>
+              <p class="turn-left">поворотное</p>
+              <p class="turn-down">поворотно-откидное</p>
             </div>
           </div>
           <div class="wcalc__frame wcalc__frame--2 left-float">
-            <img style="padding-left:4px;" class="" src="assets/images/f41.png" alt="">
-            <div class="wcalc__option">
-              <p class="closed checked">глухое</p>
-              <p class="turn-around">поворотное</p>
-              <p class="turn-up">поворотно-откидное</p>
+            <img class="pic-sec" src="assets/images/f41.png" alt="">
+            <div class="wcalc__option wcalc__option--2">
+              <p class="closed-sec checked">глухое</p>
+              <p class="turn-left-sec">поворотное</p>
+              <p class="turn-down-sec">поворотно-откидное</p>
             </div>
           </div>
           <div class="wcalc__frame wcalc__frame--1">
-            <img style="padding-left:4px;" class="" src="assets/images/f42.png" alt="">
-            <div class="wcalc__option">
+            <img class="pic" src="assets/images/f42.png" alt="">
+            <div class="wcalc__option wcalc__option--2">
               <p class="closed checked">глухое</p>
-              <p class="turn-around">поворотное</p>
-              <p class="turn-up">поворотно-откидное</p>
+              <p class="turn-right">поворотное</p>
+              <p class="turn-down">поворотно-откидное</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="wcalc__box wcalc__box--5">
+
+        </div>
+
+        <div class="wcalc__box wcalc__box--6">
+          <div class="wcalc__frame wcalc__frame--2 left-float">
+            <img class="pic-rev" src="assets/images/f31.png" alt="">
+            <div class="wcalc__option wcalc__option--1">
+              <p class="closed-rev checked">глухое</p>
+              <p class="turn-left">поворотное</p>
+              <p class="turn-down">поворотно-откидное</p>
+            </div>
+          </div>
+          <div class="wcalc__frame wcalc__frame--1">
+            <img class="pic" src="assets/images/f32.png" alt="">
+            <div class="wcalc__option wcalc__option--3">
+              <p class="closed checked">глухое</p>
+              <p class="turn-right">поворотное</p>
+              <p class="turn-down">поворотно-откидное</p>
             </div>
           </div>
         </div>
