--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
             <h4 class="wcalc__heading">Тип открывания</h4>
 
             <div class="noUiSlider-one left-float">
-                <div id="slider-v-one" class="noUiSlider-content noframe">
+                <div id="slider1" class="noUiSlider-content noframe">
                 </div>
-                <div id="slider-v-two" class="noUiSlider-content noframe">
+                <div id="slider3" class="noUiSlider-content noframe">
                 </div>
-                <div id="slider-v-three" class="noUiSlider-content">
+                <div id="slider5" class="noUiSlider-content">
                 </div>
             </div>
 
@@ -198,7 +198,7 @@
             </div>
 
             <div class="noUiSlider-two">
-                <div id="slider-h-one" class="left-float">
+                <div id="slider2" class="left-float">
                 </div>
             </div>
 
