enough for today

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
           Тип открывания
         </h4>
 
-        <div id="sliderVone" class="left-float noframe"></div>
-        <div id="sliderVtwo" class="left-float noframe"></div>
-        <div id="sliderVthree" class="left-float"></div>
+        <div id="sliderVone" class="slider left-float noframe"></div>
+        <div id="sliderVtwo" class="slider left-float noframe"></div>
+        <div id="sliderVthree" class="slider left-float noframe"></div>
 
         <div class="wcalc__box wcalc__box--1 isframe">
           <div class="wcalc__frame wcalc__frame--1">
@@ -198,11 +198,11 @@
           </div>
         </div>
 
-      <div id="sliderHone" class="noframe"></div>
-      <div id="sliderHtwo" class="noframe"></div>
-      <div id="sliderHthree" class="noframe"></div>
-      <div id="sliderHfour" class="noframe"></div>
-      <div id="sliderHfive"></div>
+      <div id="sliderHone" class="slider noframe"></div>
+      <div id="sliderHtwo" class="slider noframe"></div>
+      <div id="sliderHthree" class="slider noframe"></div>
+      <div id="sliderHfour" class="slider noframe"></div>
+      <div id="sliderHfive" class="slider noframe"></div>
 
       </div>
     </div>
@@ -212,7 +212,7 @@
     <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="bower_components/jQuery-ui-Slider-Pips/dist/jquery-ui-slider-pips.min.js"></script>
+    <script src="bower_components/jQuery-ui-Slider-Pips/dist/jquery-ui-slider-pips.js"></script>
     <!-- include the jQuery and jQuery UI scripts -->
 
 
