--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <body>
 
     <div class="wcalc">
+
       <ul class="wcalc__icons">
         <li><h4 class="wcalc__heading">Тип<br>окна</h4></li>
         <li rel="wcalc__box--1" class="checked-icon gal-icon wcalc-icon--1">
@@ -56,6 +57,19 @@
           <img src="assets/images/fn6.png" alt="">
         </li>
       </ul>
+
+      <div class="wcalc__profile">
+        <h4 class="wcalc__heading">Выбор профиля</h4>
+        <div class="wcalc__profcontainer">
+          <div class="wcalc__profitem">
+            <span>Стандарт</span>
+            <div class="wcalc__description-call">
+              <p>Rehau Blitz</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="wcalc__measures">
         <div class="wcalc__size">
           <h4 class="wcalc__heading">Размеры</h4>
@@ -83,6 +97,7 @@
           </ul>
         </div>
       </div>
+
       <div class="wcalc__models">
         <h4 class="wcalc__heading">
           Тип открывания
@@ -205,6 +220,7 @@
       <div id="sliderHfive" class="slider noframe"></div>
 
       </div>
+
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
