did almost all front-end part

--- a/index.html
+++ b/index.html
@@ -62,9 +62,107 @@
         <h4 class="wcalc__heading">Выбор профиля</h4>
         <div class="wcalc__profcontainer">
           <div class="wcalc__profitem">
-            <span>Стандарт</span>
-            <div class="wcalc__description-call">
+            <span class="col-xs-5 colour--grey">Стандарт</span>
+            <div class="col-xs-6 col-xs-offset-1 wcalc__description-call back-hover--grey">
               <p>Rehau Blitz</p>
+            </div>
+            <div class="wcalc__profdescription">
+              <h3><strong>Rehau Blitz</strong></h3>
+              <div class="col-xs-6">
+                <img src="assets/images/blitz.jpg" alt="">
+              </div>
+              <span class="col-xs-6 wcalc__profmarks">
+                <ul class="wcalc__blitz">
+                  <li>Тепло: 7/10<span></span></li>
+                  <li>Шум: 7/10<span></span></li>
+                  <li>Свет: 8/10<span></span></li>
+                </ul>
+              </span>
+              <ul class="col-xs-12">
+                <li>Стеклопакет: 32мм, 2 камеры</li>
+                <li>Формула: 4х10х4х10х4</li>
+                <li>Фурнитура: Siegenia-Aubi, Favorit</li>
+                <li>Базовый цвет: белый</li>
+                <li>Уплотнитель: черный</li>
+              </ul>
+            </div>
+          </div>
+          <div class="wcalc__profitem">
+            <span class="col-xs-5 colour--blue">Комфорт</span>
+            <div class="col-xs-6 col-xs-offset-1 wcalc__description-call back-hover--blue">
+              <p>Rehau Delight</p>
+            </div>
+            <div class="wcalc__profdescription">
+              <h3><strong>Rehau Delight</strong></h3>
+              <div class="col-xs-6">
+                <img src="assets/images/delight.jpg" alt="">
+              </div>
+              <span class="col-xs-6 wcalc__profmarks">
+                <ul class="wcalc__delight">
+                  <li>Тепло: 8/10<span></span></li>
+                  <li>Шум: 9/10<span></span></li>
+                  <li>Свет: 8/10<span></span></li>
+                </ul>
+              </span>
+              <ul class="col-xs-12">
+                <li>Стеклопакет: 32мм, 2 камеры</li>
+                <li>Формула: 4х10х4х10х4</li>
+                <li>Фурнитура: Siegenia-Aubi, Favorit</li>
+                <li>Базовый цвет: белый</li>
+                <li>Уплотнитель: черный</li>
+              </ul>
+            </div>
+          </div>
+          <div class="wcalc__profitem">
+            <span class="col-xs-5 colour--green">Премиум</span>
+            <div class="col-xs-6 col-xs-offset-1 wcalc__description-call back-hover--green">
+              <p>Rehau Brillant</p>
+            </div>
+            <div class="wcalc__profdescription">
+              <h3><strong>Rehau Brillant</strong></h3>
+              <div class="col-xs-6">
+                <img src="assets/images/brillant.jpg" alt="">
+              </div>
+              <span class="col-xs-6 wcalc__profmarks wcalc__brillant">
+                <ul>
+                  <li>Тепло: 9/10<span></span></li>
+                  <li>Шум: 10/10<span></span></li>
+                  <li>Свет: 9/10<span></span></li>
+                </ul>
+              </span>
+              <ul class="col-xs-12">
+                <li>Стеклопакет: 32мм, 2 камеры</li>
+                <li>Формула: 4х10х4х10х4</li>
+                <li>Фурнитура: Siegenia-Aubi, TITAN AF</li>
+                <li>Базовый цвет: белый</li>
+                <li>Уплотнитель: черный</li>
+              </ul>
+            </div>
+          </div>
+          <div class="wcalc__profitem">
+            <span class="col-xs-5 colour--orange">Эксклюзив</span>
+            <div class="col-xs-6 col-xs-offset-1 wcalc__description-call back-hover--orange">
+              <p>Rehau Geneo</p>
+            </div>
+            <div class="wcalc__profdescription">
+              <h3><strong>Rehau Geneo</strong></h3>
+              <div class="col-xs-6">
+                <img src="assets/images/geneo.jpg" alt="">
+              </div>
+              <span class="col-xs-6 wcalc__profmarks wcalc__geneo">
+                <ul>
+                  <li>Тепло: 10/10<span></span></li>
+                  <li>Шум: 10/10<span></span></li>
+                  <li>Свет: 10/10<span></span></li>
+                </ul>
+              </span>
+              <ul class="col-xs-12">
+                <li>Стеклопакет: 32мм, 2 камеры</li>
+                <li>Формула: 4х10х4х10х4</li>
+                <li>Фурнитура: Siegenia-Aubi, TITAN AF + iСтекло</li>
+                <li>Базовый цвет: белый</li>
+                <li>Уплотнитель: черный</li>
+              </ul>
             </div>
           </div>
         </div>
